--- a/AccessoriesApp.Web/Views/Order/Confirmed.cshtml
+++ b/AccessoriesApp.Web/Views/Order/Confirmed.cshtml
@@ -41,7 +41,7 @@
                 <h5 class="modal-title">Order Details</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body p-1">
 
 @foreach (var item in Model.OrderItems)
 {
@@ -64,14 +64,14 @@
             </div>
 
             <div class="col-md-8">
-                <div class="card-body d-flex flex-column">
-                    <h5 class="card-title">@item.Title</h5>
-                    <p class="card-text">Category: @item.CategoryName</p>
-                    <p class="card-text">PriceBGN: @item.PriceBGN</p>
-                    <p class="card-text">PriceEuro: @item.PriceEuro</p>
-                    <p class="card-text">Quantity: @item.Quantity</p>
-                    <p class="card-text">Total price BGN: @(item.Quantity* item.PriceBGN)</p>
-                    <p class="card-text">Total price Euro: @(item.Quantity* item.PriceEuro)</p>
+                <div class="card-body d-flex flex-column p-1">
+                    <h5 class="card-title">@item.Title</h5>                    
+                    <div class="card-text mt-1">Category: @item.CategoryName</div>
+                    <div class="card-text mt-1">PriceBGN: @item.PriceBGN</div>
+                    <div class="card-text mt-1">PriceEuro: @item.PriceEuro</div>
+                    <div class="card-text mt-1">Quantity: @item.Quantity</div>
+                    <div class="card-text mt-1">Total price BGN: @(item.Quantity* item.PriceBGN)</div>
+                    <div class="card-text mt-1">Total price Euro: @(item.Quantity* item.PriceEuro)</div>
                 </div>
             </div>
 
