--- a/AccessoriesApp.Web/Views/Accessories/Add.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Add.cshtml
@@ -32,7 +32,7 @@
 
                 <div class="col-sm-6 mb-2">
                     <label asp-for="@Model.CategoryId" class="form-label-add-edit">Select Category</label>
-                    <select asp-for="@Model.CategoryId" class="form-control" aria-required="true" asp-items="@(new SelectList(Model.Categories, "Id", "Name"))">
+                     <select asp-for="@Model.CategoryId" class="form-control form-select" aria-required="true" asp-items="@(new SelectList(Model.Categories, "Id", "Name"))">
                         <option value="">...</option>
                     </select>
                     <span asp-validation-for="@Model.CategoryId" class="text-danger"></span>
