--- a/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
+++ b/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -96,6 +98,9 @@
                                     <a class="dropdown-item" asp-controller="Accessories" asp-action="Index">
                                         <i class="fas fa-list"></i> All Accessories
                                     </a>
+                                   
+                                    @await Component.InvokeAsync("CategoryDropdown")
+                                    
                                     <!--
                                     <div class="dropdown-divider"></div>      
                                     -->
@@ -167,7 +172,7 @@
                                 <div class="dropdown-menu">
                                     <a class="dropdown-item" asp-controller="Accessories" asp-action="Index">
                                         <i class="fas fa-list"></i> All Accessories
-                                    </a>
+                                    </a>                                    
                                 </div>
                             </li>
                         }
