--- a/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
+++ b/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
@@ -76,26 +76,17 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            @if (User?.Identity?.IsAuthenticated ?? false)
-                            {
-                                <a class="nav-link active" asp-controller="Accessories" asp-action="Index">
-                                    <i class="fas fa-home"></i> Home
-                                </a>
-                            }
-                            else
-                            {
-                                <a class="nav-link active" asp-controller="Home" asp-action="Index">
-                                    <i class="fas fa-home"></i> Home
-                                </a>
-                            }
+
+                        <li class="nav-item">                            
+                              <a class="nav-link active" asp-controller="Home" asp-action="Index">
+                                   <i class="fas fa-home"></i> Home
+                              </a>                            
                         </li>
-                        @if (User?.Identity?.IsAuthenticated ?? false)
-                        {
-                            <li class="nav-item dropdown">
+
+                        <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Accessories</a>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" asp-controller="Accessories" asp-action="Index">
+                                    <a class="dropdown-item" asp-controller="Accessories" asp-action="Index" asp-route-id="0">
                                         <i class="fas fa-list"></i> All Accessories
                                     </a>
                                    
@@ -105,7 +96,10 @@
                                     <div class="dropdown-divider"></div>      
                                     -->
                                 </div>
-                            </li>
+                        </li>
+
+                        @if (User?.Identity?.IsAuthenticated ?? false)
+                        {                            
 
                             @if (!User.IsInRole("Admin"))
                             {
@@ -163,19 +157,7 @@
 
                             }
                         }
-                        else
-                        {
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fas fa-list"></i> Accessories
-                                </a>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" asp-controller="Accessories" asp-action="Index">
-                                        <i class="fas fa-list"></i> All Accessories
-                                    </a>                                    
-                                </div>
-                            </li>
-                        }
+                        
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
