--- a/AccessoriesApp.Web/Views/Order/ConfirmedHistory.cshtml
+++ b/AccessoriesApp.Web/Views/Order/ConfirmedHistory.cshtml
@@ -3,13 +3,19 @@
 @model OrderFilterViewModel
 
 
-
 @{
     ViewData["Title"] = "Index";
 }
 
 
 <div class="container mt-3">
+
+    <div class="d-flex justify-content-between align-items-center mb-1">
+        <h1 class="text-muted fw-bold">My Confirmed orders</h1>
+        <a asp-controller="Home" asp-action="Index" class="btn btn-secondary fw-bold">
+            <i class="bi bi-arrow-left"></i> Back to Home Page
+        </a>
+    </div>
 
 
     <div class="row justify-content-center my-3">
