--- a/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
+++ b/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
@@ -155,6 +155,13 @@
                                 </div>
                             </li>
 
+                            <li class="nav-item d-flex align-items-center">
+                                <form asp-controller="Order" asp-action="ConfirmedHistory" method="post" class="d-inline py-2">
+                                    <button type="submit" class="nav-link btn btn-link p-0 border-0" style="text-decoration: none;">
+                                        <i class="fa-solid fa-chart-column"></i> Order statistics
+                                    </button>
+                                </form>
+                                </li>
                             }
                         }
                         
