--- a/AccessoriesApp.Web/Views/Accessories/Details.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Details.cshtml
@@ -36,7 +36,7 @@
             <p class="card-text">@Model.Description</p>
             <hr />
             <p class="card-text"><small class="text-muted">Category: @Model.CategoryName</small></p>
-            <p class="card-text"><small class="text-muted">Created On: @Model.ReleaseDate.ToString("dd-MM-yyyy")</small></p>
+            <p class="card-text"><small class="text-muted">Created On: @Model.ReleaseDate.ToString("yyyy-MM-dd")</small></p>
             <p class="card-text"><small class="text-muted">Author: @Model.PriceBGN</small></p>
             <p class="card-text"><small class="text-muted">Author: @Model.AuthorUserName</small></p>
             <hr />
