--- a/AccessoriesApp.Web/Views/Favorites/GetAllFavorites.cshtml
+++ b/AccessoriesApp.Web/Views/Favorites/GetAllFavorites.cshtml
@@ -7,12 +7,16 @@
 
 <div class="container mt-4">
 
-<div class="d-flex justify-content-between align-items-center mb-1">
+ <div class="row justify-content-start">
+    <div class="col-md-12">
+        <div class="d-flex justify-content-between align-items-center mb-1">
         <h1 class="text-muted fw-bold">My Favorites list</h1>
         <a asp-controller="Home" asp-action="Index" class="btn btn-secondary fw-bold">
             <i class="bi bi-arrow-left"></i> Back to Home Page
         </a>
+        </div>
     </div>
+ </div>
 
     @if (!Model.Any())
     {
