--- a/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
+++ b/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
@@ -152,6 +152,10 @@
                                     <a class="dropdown-item" asp-controller="Accessories" asp-action="Add">
                                         <i class="fas fa-plus"></i> Add Accessory
                                     </a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" asp-controller="Categories" asp-action="MyAllCategories">
+                                        <i class="fa-solid fa-layer-group"></i> Add Category
+                                    </a>
                                 </div>
                             </li>
 
