--- a/AccessoriesApp.Web/Views/Accessories/Details.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Details.cshtml
@@ -1,18 +1,14 @@
 ﻿@using AccessoriesApp.Web.ViewModels
 @model AccessoriesDetailsViewModel
 
-@{
-    ViewData["Title"] = "Details";
-}
 
-<h1>Details</h1>
 
 @{
-    ViewData["Title"] = "Recipe Details";
+    ViewData["Title"] = Model.Title + " details";
 }
 
 <div class="d-flex justify-content-between align-items-center mb-3" style="margin-top: 20px;">
-    <h2>@ViewData["Title"]</h2>
+    <h2 class="text-muted fw-bold">@ViewData["Title"]</h2>
 </div>
 <hr />
 
@@ -43,17 +39,36 @@
         </div>
         <div class="card-footer text-center">
             <div class="d-flex justify-content-between align-items-center">
-                <button type="button" class="btn btn-warning d-flex justify-content-center align-items-center flex-fill mx-1" onclick="history.back()">
-                    <i class="fas fa-arrow-left"></i> Back
-                </button>
-                @if (User?.Identity?.IsAuthenticated == true && !Model.IsAuthor && !Model.IsSaved)
-                {
-                        <form asp-controller="Favorites" asp-action="Save" method="post" class="d-flex justify-content-center align-items-center flex-fill mx-1">
-                        <input type="hidden" name="id" value="@Model.Id" />
-                        <button type="submit" class="btn btn-success w-100">
-                            <i class="fas fa-heart"></i> Add to Favorites
-                        </button>
-                        </form>
+                
+                @if (User?.Identity?.IsAuthenticated == true && !Model.IsAuthor)
+                {                       
+
+                        if (!Model.IsSaved)
+                            {
+                            <form asp-controller="Favorites" asp-action="Save" method="post" class="me-2 text-nowrap">
+                                <input type="hidden" name="id" value="@Model.Id" />
+                                <button type="submit" class="btn btn-outline-secondary" title="Add to Favorites">
+                                    <!--
+                                    <i class="fas fa-heart"></i> Add to Favorites
+                                    -->
+                                    <i class="fa-regular fa-heart"></i>
+                                </button>
+                                </form>
+                            }
+                            else
+                            {
+                              <form asp-controller="Favorites" asp-action="Remove" method="post" class="me-2 text-nowrap">
+                                <input type="hidden" name="id" value="@Model.Id" />
+                                <button type="submit" class="btn btn-outline-secondary" title="Remove from Favorites">
+                                    <!--
+                                    <i class="fa-solid fa-square-minus"></i>Remove from Favorites
+                                    -->
+                                    <i class="fa-solid fa-heart" style="color: #ff0000;"></i>
+                                </button>
+                                </form>  
+                            }
+
+
                     <a asp-controller="OrderItem" asp-action="Create" asp-route-id="@Model.Id" class="btn btn-danger d-flex justify-content-center align-items-center flex-fill mx-1">
                             <i class="fa-solid fa-cart-shopping"></i> Аdd to Orders
                     </a>
@@ -67,6 +82,9 @@
                         <i class="fas fa-trash"></i> Delete
                     </a>
                 }
+                    <button type="button" class="btn btn-warning d-flex justify-content-center align-items-center flex-fill mx-1" onclick="history.back()">
+                        <i class="fas fa-arrow-left"></i> Back
+                    </button>
             </div>
         </div>
     </div>
