--- a/AccessoriesApp.Web/Views/Favorites/GetAllFavorites.cshtml
+++ b/AccessoriesApp.Web/Views/Favorites/GetAllFavorites.cshtml
@@ -77,9 +77,22 @@
                         }
                         else
                         {
-                            <a asp-controller="Accessories" asp-action="Details" asp-route-id="@item.Id" class="btn btn-info w-100">
+                            
+
+                            <form asp-controller="Favorites" asp-action="Remove" method="post" class="me-2 text-nowrap">
+                                <input type="hidden" name="id" value="@item.Id" />
+                                <button type="submit" class="btn btn-outline-secondary" title="Remove from Favorites">
+                                    <!--
+                                    <i class="fa-solid fa-square-minus"></i>Remove from Favorites
+                                    -->
+                                    <i class="fa-solid fa-heart" style="color: #ff0000;"></i>
+                                </button>
+                             </form>  
+
+                            <a asp-controller="Accessories" asp-action="Details" asp-route-id="@item.Id" class="btn btn-info w-100 mx-2">
                                 <i class="fas fa-info-circle"></i> Details
                             </a>
+
                         }
                     </div>
                 </div>
