--- a/AccessoriesApp.Web/Views/Order/Confirm.cshtml
+++ b/AccessoriesApp.Web/Views/Order/Confirm.cshtml
@@ -38,13 +38,13 @@
                 @if (item.Image != null)
                 {
                     <a asp-controller="Accessories" asp-action="Details" asp-route-id="@item.Id">
-                    <img src="data:image/jpeg;base64,@Convert.ToBase64String(item.Image)" class="img-fluid w-100 h-100 object-fit-cover" style="max-height: 150px;" alt="@item.Title">
+                    <img src="data:image/jpeg;base64,@Convert.ToBase64String(item.Image)" class="img-fluid w-100 h-100 object-fit-cover" alt="@item.Title">
                     </a>
                 }
                 else
                 {
                     <a asp-controller="Accessories" asp-action="Details" asp-route-id="@item.Id">
-                    <img src="~/images/default-image.jpg" class="img-fluid w-100 h-100 object-fit-cover" style="max-height: 150px; object-fit: contain;" alt="No Image Available">
+                    <img src="~/images/default-image.jpg" class="img-fluid w-100 h-100 object-fit-cover"  alt="No Image Available">
                     </a>
                 }
                     </div>
@@ -76,7 +76,7 @@
     </div>
 
           <div class="d-flex mb-3 mt-3">
-          <button type="submit" class="btn btn-sm btn-success w-25">
+          <button type="submit" class="btn btn-success w-100">
           <i class="fa-solid fa-truck"></i> Send order
           </button>
      </div>
