--- a/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
+++ b/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
             <div class="container-fluid">
                 @if (User?.Identity?.IsAuthenticated ?? false)
                 {
-                    <a class="navbar-brand" asp-controller="Recipe" asp-action="Index">                        
+                    <a class="navbar-brand" asp-controller="Home" asp-action="Index">                        
                         <i class="fa-solid fa-hat-cowboy-side"></i> Оur Аccessories
                         <span class="visually-hidden">(current)</span>
                     </a>
