--- a/AccessoriesApp.Web/Views/Accessories/Add.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Add.cshtml
@@ -6,7 +6,7 @@
     var today = DateTime.Now.ToString("yyyy-MM-dd");
 }
 
-<div class="d-flex justify-content-between align-items-center mb-3" style="margin-top: 20px;">
+<div class="d-flex justify-content-between align-items-center mb-3 text-muted" style="margin-top: 20px;">
     <h2>@ViewData["Title"]</h2>
 </div>
 <hr />
@@ -72,7 +72,7 @@
             </div>
 
             <div class="mb-0">
-                <button class="btn btn-warning btn-dark-text w-100 pb-0 fw-bold rounded" type="submit">
+                        <button class="btn btn-warning btn-dark-text w-100 pb-0 fw-bold rounded text-white" type="submit">
                     <i class="fas fa-save"></i> Save
                 </button>
             </div>
