--- a/AccessoriesApp.Web/Views/Accessories/Details.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Details.cshtml
@@ -35,7 +35,7 @@
             <p class="card-text"><small class="text-muted">Created On: @Model.ReleaseDate.ToString("yyyy-MM-dd")</small></p>
             <p class="card-text"><small class="text-muted">Author: @Model.PriceBGN</small></p>
             <p class="card-text"><small class="text-muted">Author: @Model.AuthorUserName</small></p>
-            <hr />
+            
         </div>
         <div class="card-footer text-center">
             <div class="d-flex justify-content-between align-items-center">
@@ -82,7 +82,7 @@
                         <i class="fas fa-trash"></i> Delete
                     </a>
                 }
-                    <button type="button" class="btn btn-warning d-flex justify-content-center align-items-center flex-fill mx-1" onclick="history.back()">
+                    <button type="button" class="btn btn-warning d-flex justify-content-center align-items-center flex-fill mx-1 text-white" onclick="history.back()">
                         <i class="fas fa-arrow-left"></i> Back
                     </button>
             </div>
