--- a/AccessoriesApp.Web/Views/Categories/MyAllCategories.cshtml
+++ b/AccessoriesApp.Web/Views/Categories/MyAllCategories.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-<div class="d-flex justify-content-between align-items-center mb-3">
+<div class="d-flex justify-content-between align-items-center my-3 text-muted">
     <h2>Category List</h2>
     <a asp-controller="Categories" asp-action="Create" class="btn btn-primary">
         <i class="bi bi-plus-circle"></i> Add Category
