--- a/AccessoriesApp.Web/Views/Order/Confirmed.cshtml
+++ b/AccessoriesApp.Web/Views/Order/Confirmed.cshtml
@@ -13,10 +13,9 @@
         
             <div class="card mb-3">     
                 <div class="card-header">
-                <h1>Shopping cart</h1>
+                <h1 class="text-muted">Shopping cart ID @Model.Id</h1>
                 </div>
                 <div class="card-body d-flex flex-column">
-                     <h5 class="card-title">@Model.Id</h5>
                     <p class="card-text">User name: @Model.OrderUserName</p>
                     <p class="card-text">TotalCountProducts: @Model.TotalCountProducts</p>
                     <p class="card-text">PriceBGN: @Model.TotalPriceBGN</p>
