--- a/AccessoriesApp.Web/Views/OrderItem/Create.cshtml
+++ b/AccessoriesApp.Web/Views/OrderItem/Create.cshtml
@@ -6,12 +6,12 @@
     var today = DateTime.Now.ToString("yyyy-MM-dd");
 }
 
-<div class="d-flex justify-content-between align-items-center mb-3" style="margin-top: 20px;">
+<div class="d-flex justify-content-between align-items-center mb-3 text-muted" style="margin-top: 20px;">
     <h2>@ViewData["Title"]</h2>
 </div>
 <hr />
 
-<div class="row justify-content-center" style="margin: 0 auto; ">
+<div class="row justify-content-center text-muted" style="margin: 0 auto; ">
     <div class="col-md-4 text-center">
         
         @if (Model.Image != null)
@@ -25,7 +25,7 @@
 
     </div>
 
-    <div class="col-md-8">
+    <div class="col-md-8 ">
         <div class="row">
             <div class="col-sm-12 ">
                 <form asp-controller="OrderItem" asp-action="Create" method="post" enctype="multipart/form-data">
