--- a/AccessoriesApp.Web/Views/OrderItem/Index.cshtml
+++ b/AccessoriesApp.Web/Views/OrderItem/Index.cshtml
@@ -45,7 +45,7 @@
                 @if (item.Image != null)
                 {
                     <a asp-controller="Accessories" asp-action="Details" asp-route-id="@item.Id">
-                    <img src="data:image/jpeg;base64,@Convert.ToBase64String(item.Image)" class="img-fluid w-100 h-100 object-fit-cover" style="max-height: 150px;" alt="@item.Title">
+                    <img src="data:image/jpeg;base64,@Convert.ToBase64String(item.Image)" class="img-fluid w-100 h-100 object-fit-cover" alt="@item.Title">
                     </a>
                 }
                 else
