--- a/AccessoriesApp.Web/Views/Accessories/Add.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Add.cshtml
@@ -2,7 +2,7 @@
 @model AccessoriesFormInputModel
 
 @{
-    ViewData["Title"] = "Create Recipe";
+    ViewData["Title"] = "Create new accessory";
     var today = DateTime.Now.ToString("yyyy-MM-dd");
 }
 
