--- a/AccessoriesApp.Web/Views/Shared/Components/CategoryDropdown/Default.cshtml
+++ b/AccessoriesApp.Web/Views/Shared/Components/CategoryDropdown/Default.cshtml
@@ -12,7 +12,8 @@
 
         else if (category.Name == "Necklaces")
         {
-            <img src="~/images/intricate-necklace-svgrepo-com.svg" width="24" alt="Earrings icon" /> @category.Name
+            <img src="~/images/intricate-necklace-svgrepo-com.svg" width="24" alt="Necklaces icon" /> 
+            @category.Name
         }        
         
         else if (category.Name == "Bags")
