--- a/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
+++ b/AccessoriesApp.Web/Views/Shared/_Layout.cshtml
@@ -48,11 +48,19 @@
       color: red;
     }
 
+    .img-zoom {
+        transition: transform 0.3s ease;
+    }
+
+    .img-zoom:hover {
+        transform: scale(1.05); /* Adjust zoom level */
+    }
+
 
     </style>
 
 </head>
-<body class="d-flex flex-column min-vh-100">
+<body class="d-flex flex-column ">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
