--- a/AccessoriesApp.Web/Views/Accessories/Index.cshtml
+++ b/AccessoriesApp.Web/Views/Accessories/Index.cshtml
@@ -23,7 +23,7 @@
     @foreach (var item in Model.Items)
     {
         <div class="col-md-3 mb-4">
-            <div class="card h-100" style="width: 100%;">
+            <div class="card h-100 img-zoom" style="width: 100%;">
                 @if (item.Image != null)
                 {
                     <a asp-controller="Accessories" asp-action="Details" asp-route-id="@item.Id">
