--- a/AccessoriesApp.Web/Views/Home/Index.cshtml
+++ b/AccessoriesApp.Web/Views/Home/Index.cshtml
@@ -16,12 +16,12 @@
 </div>
 
 <!-- Explore Section -->
-<div class="container py-2 mt-3 rounded-3 shadow bg-danger-subtle">
-    <h2 class="text-center mb-2 fw-semibold text-muted" style="font-family: 'Georgia', serif;">Explore Accessories</h2>
+<div class="container p-4 mt-3 rounded-3 shadow bg-danger-subtle">
+    <h2 class="text-center mb-3 fw-semibold text-muted" style="font-family: 'Georgia', serif;">Explore Accessories</h2>
     <div class="row g-4">
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="card h-100 border-0 hover-shadow shadow">
-                <img src="~/images/Necklaces_and_earrings1.jpg" asp-append-version="true" class="card-img-top rounded-top" alt="Appetizers">
+            <div class="card h-100 border-0 hover-shadow shadow img-zoom">
+                <img src="~/images/Necklaces_and_earrings1.jpg" asp-append-version="true" class="card-img-top rounded-top " alt="Appetizers">
                 <div class="card-body text-center">
                     <h5 class="card-title text-muted">Necklaces and earrings</h5>
                     <p class="card-text text-muted">Start earrings and necklaces with quick and easy ideas</p>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="card h-100 border-0 hover-shadow shadow">
+            <div class="card h-100 border-0 hover-shadow shadow img-zoom">
                 <img src="~/images/Hats_and_scarves2.jpg" asp-append-version="true" class="card-img-top rounded-top" alt="Main Dishes">
                 <div class="card-body text-center">
                     <h5 class="card-title text-muted">Hats and scarves</h5>
@@ -40,7 +40,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
-            <div class="card h-100 border-0 hover-shadow shadow">
+            <div class="card h-100 border-0 hover-shadow shadow img-zoom">
                 <img src="~/images/Bags_and_purses1.jpg" asp-append-version="true" class="card-img-top rounded-top" alt="Desserts">
                 <div class="card-body text-center">
                     <h5 class="card-title text-muted">Bags and purses</h5>
